Links updated to work properly via host server

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
       #admin a:visited {color: #ece9e7;}
       #admin a:link {color: #ece9e7;}
       #admin a:hover {color: hsl(192, 67%, 27%);}
-      .block {color:black; font-size: 24px; font-weight: 900} 
+      .block {color:black; font-size: 20px; font-weight: 900} 
       .block h3 p {text-decoration: none}
        /* Style all font awesome icons */
       .fa {
@@ -102,8 +102,8 @@
   <br />
   <br />
     <div class="block">
-        <h3>Music</h3>
-        <iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <h3>404</h3>
+      <p> Some kind of error occurred, use one of the links at the top to take you back!</p>
     </div>
   <br />
     <div id="Links">
