--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
       #admin a:visited {color: #ece9e7;}
       #admin a:link {color: #ece9e7;}
       #admin a:hover {color: hsl(192, 67%, 27%);}
-      .About {color:black; font-size: 24px; font-weight: 900} 
-      .About h3 p {text-decoration: none}
+      .block {color:black; font-size: 20px; font-weight: 900} 
+      .block h3 p {text-decoration: none}
        /* Style all font awesome icons */
       .fa {
         padding: 20px;
@@ -101,9 +101,9 @@
   </div>
   <br />
   <br />
-    <div class="About">
-        <h3>About</h3>
-        <p> Ambivist are a band.</p>
+    <div class="block">
+      <h3>About</h3>
+      <p> Ambivist are a band.</p>
     </div>
   <br />
     <div id="Links">
