--- a/gigs.html
+++ b/gigs.html
@@ -7,7 +7,7 @@
       h3 a:visited {color: #ece9e7;}
       h3 a:link {color:#ece9e7; text-decoration: none}
       h3 a:hover {color: white;}
-      p {font-size: 24px; font: fonts/}
+      p {font-size: 20px; font: fonts/}
       #Bar {background-color: #1C1C1D; 
             color:white;}
       #Bar td {height: 10px; width:300px;}
@@ -17,8 +17,8 @@
       #admin a:visited {color: #ece9e7;}
       #admin a:link {color: #ece9e7;}
       #admin a:hover {color: hsl(192, 67%, 27%);}
-      .Music {color:black; font-size: 24px; font-weight: 900} 
-      .Music h3 p {text-decoration: none}
+      .block {color:black; font-size: 20px; font-weight: 900} 
+      .block h3 p {text-decoration: none}
        /* Style all font awesome icons */
       .fa {
         padding: 20px;
@@ -101,9 +101,9 @@
   </div>
   <br />
   <br />
-    <div class="Music">
-        <h3>Music</h3>
-        <iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="block">
+    <h3>Gigs</h3>
+    <p> Nothing yet.</p>
     </div>
   <br />
     <div id="Links">
