--- a/news.html
+++ b/news.html
@@ -78,22 +78,22 @@
       <tr>
         <td>
           <h3>
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
           </h3>
         </td>
         <td>
           <h3>
-            <a href="/news.html">News</a>
+            <a href="news.html">News</a>
           </h3>
         </td>
         <td>
           <h3>
-              <a href="/about.html">About</a>
+              <a href="about.html">About</a>
           </h3>
         </td>
         <td>
           <h3>
-              <a href="/gigs.html">Gigs</a>
+              <a href="gigs.html">Gigs</a>
           </h3>
         </td>
       </tr>
