--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@
       #admin a:hover {color: hsl(192, 67%, 27%);}
       .block {color:black; font-size: 20px; font-weight: 900} 
       .block h3 p {text-decoration: none}
+      <link rel="icon" href="files/favicon.png">
        /* Style all font awesome icons */
       .fa {
         padding: 20px;
