--- a/news.html
+++ b/news.html
@@ -120,10 +120,10 @@
       <a href="https://twitter.com/ambivistband/" class="fa fa-twitter"></a>
       <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
       <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
-      <a href="https://github.com/babbysross/www" class="fa fa-github"></a>
+      <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
     </div>
     <div id="admin">
-        <a href="">Admin Login</a>
+        <a href="https://s3.console.aws.amazon.com/s3/home?region=eu-west-2">Admin Login</a>
     </div>
   </center>
 </body>
