--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="files/favicon.png">
     <style type="text/css">
       body {background-color:white; font-family: bariolregular}
       h1  {color:black; font-size: 38px; font-weight: 900}
@@ -19,7 +20,6 @@
       #admin a:hover {color: hsl(192, 67%, 27%);}
       .block {color:black; font-size: 24px; font-weight: 900} 
       .block h3 p {text-decoration: none}
-      <link rel="icon" href="files/favicon.png">
        /* Style all font awesome icons */
       .fa {
         padding: 20px;
@@ -123,7 +123,7 @@
       <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
     </div>
     <div id="admin">
-        <a href="https://s3.console.aws.amazon.com/s3/home?region=eu-west-2">Admin Login</a>
+        <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
     </div>
   </center>
 </body>
