--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Ambivist</title>
+    <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
+    <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
     <link rel="icon" href="files/favicon.png">
     <style type="text/css">
       body {background-color:white; font-family: bariolregular}
