Added some meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Ambivist</title>
     <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
-    <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
+    <meta name=”keywords” content=”Ambivist,Prog,Progressive,Glasgow,Scotland,Rock.”>
     <link rel="icon" href="files/favicon.png">
     <style type="text/css">
       body {background-color:white; font-family: bariolregular}
