Relative font sizes and viewport meta tags so the site is mobile friendly.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <title>Ambivist</title>
     <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
     <meta name=”keywords” content=”Ambivist,Prog,Progressive,Glasgow,Scotland,Rock.”>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ambivist">
+    <meta charset="UTF-8">
     <link rel="icon" href="files/favicon.png">
     <style type="text/css">
       body {background-color:white; font-family: bariolregular}
-      h1  {color:black; font-size: 38px; font-weight: 900}
+      h1  {color:black; font-size: 237%; font-weight: 900}
       h3 a:visited {color: #ece9e7;}
       h3 a:link {color:#ece9e7; text-decoration: none}
       h3 a:hover {color: white;}
-      p {font-size: 20px; font: fonts/}
+      p {font-size: 125%; font: fonts/}
       #Bar {background-color: #1C1C1D; 
             color:white;}
-      #Bar td {height: 10px; width:300px;}
+      #Bar td {height: 60%; width:300px;}
       #Bar table {text-align: center}
       #logo {max-width:50%}
-      #admin a {font-size: 14px}
+      #admin a {font-size: 87%}
       #admin a:visited {color: #ece9e7;}
       #admin a:link {color: #ece9e7;}
       #admin a:hover {color: hsl(192, 67%, 27%);}
-      .block {color:black; font-size: 24px; font-weight: 900} 
+      .block {color:black; font-size: 100%; font-weight: 900} 
       .block h3 p {text-decoration: none}
        /* Style all font awesome icons */
       .fa {
