The about section is no longer a shambles, this may not be true for the html behind it though.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <br />
     <div class="block">
         <h3>Music</h3>
-        <iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="100%" height="auto" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   <br />
   <div id="Links">
