Minor formatting jiggery, changed order of links in top bar.

--- a/about.html
+++ b/about.html
@@ -50,21 +50,21 @@
     }
 
     #Bar table {
-      text-align: center
+      text-align: center;
     }
 
-    #Bar2 {
+    #Members {
       background-color: white;
       color: black;
     }
 
-    #Bar2 td {
+    #Members td {
       height: 60%;
-      width: 300px;
+      width: 40%;
     }
 
-    #Bar2 table {
-      text-align: center
+    #Members table {
+      text-align: center;
     }
 
     #logo {
@@ -91,13 +91,13 @@
       margin-top: auto;
     }
 
-    .block {
+    .About {
       color: black;
       font-size: 100%;
       font-weight: 900
     }
 
-    .block h3 p {
+    .About h3 p {
       text-decoration: none
     }
 
@@ -166,12 +166,12 @@
           </td>
           <td>
             <h3>
-              <a href="news.html">News</a>
+              <a href="about.html">About</a>
             </h3>
           </td>
           <td>
             <h3>
-              <a href="about.html">About</a>
+              <a href="news.html">News</a>
             </h3>
           </td>
           <td>
@@ -184,70 +184,44 @@
     </div>
     <br />
     <br />
-    <div class="block">
+    <div class="About">
       <h3>About</h3>
       <p> Ambivist are a progressive rock band based in Glasgow, Scotland.</p>
     </div>
     <br />
     <br />
-    <div id="Bar2">
+    <div id="Members">
       <table>
         <tr>
           <td>
             <h3 align="left">
-              Sean Murtagh - Guitar & Vocals
+              Sean Murtagh - Vocals
             </h3>
+            <img id="logo" src="files/blackicon.png" align="left">
           </td>
           <td>
             <h3 align="right">
               Ross Elias - Guitar
             </h3>
+            <img id="logo" src="files/blackicon.png" align="right">
           </td>
         </tr>
       </table>
-    </div>
-    <br />
-    <br />
-    <div id="Bar2">
-      <table>
-        <tr>
-          <td>
-              <img id="logo" src="files/blackicon.png" align="left">
-          </td>
-          <td>
-              <img id="logo" src="files/blackicon.png" align="right">
-          </td>
-        </tr>
-      </table>
-    </div>
-    <br />
-    <br />
-    <div id="Bar2">
+      <br />
+      <br />
       <table>
         <tr>
           <td>
             <h3 align="left">
               Paul Miller - Bass
             </h3>
+            <img id="logo" src="files/blackicon.png" align="left">
           </td>
           <td>
             <h3 align="right">
               Michael Todd - Drums
             </h3>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <br />
-    <br />
-    <div id="Bar2">
-      <table>
-        <tr>
-          <td>
-              <img id="logo" src="files/blackicon.png" align="left">
-          </td>
-          <td>
-              <img id="logo" src="files/blackicon.png" align="right">
+            <img id="logo" src="files/blackicon.png" align="right">
           </td>
         </tr>
       </table>
