--- a/about.html
+++ b/about.html
@@ -21,6 +21,10 @@
       font-weight: 900
     }
 
+    h3 {
+      font-size: 117%
+    }
+
     h3 a:visited {
       color: #ece9e7;
     }
@@ -99,6 +103,15 @@
 
     .About h3 p {
       text-decoration: none
+    }
+
+    td img {
+      width: 80%;
+    }
+
+    h4 {
+      font-size: 110%;
+      overflow: hidden;
     }
 
     /* Style all font awesome icons */
@@ -191,19 +204,19 @@
     <br />
     <br />
     <div id="Members">
-      <table>
+      <table style="width:100%">
         <tr>
           <td>
-            <h3 align="left">
+            <h4 align="center">
               Sean Murtagh - Vocals
-            </h3>
-            <img id="logo" src="files/blackicon.png" align="left">
+            </h4>
+            <img src="files/Sean.jpg">
           </td>
           <td>
-            <h3 align="right">
+            <h4 align="center">
               Ross Elias - Guitar
-            </h3>
-            <img id="logo" src="files/blackicon.png" align="right">
+            </h4>
+            <img src="files/Ross.jpg">
           </td>
         </tr>
       </table>
@@ -212,16 +225,16 @@
       <table>
         <tr>
           <td>
-            <h3 align="left">
+            <h4 align="center">
               Paul Miller - Bass
-            </h3>
-            <img id="logo" src="files/blackicon.png" align="left">
+            </h4>
+            <img src="files/Paul.jpg">
           </td>
           <td>
-            <h3 align="right">
+            <h4 align="center">
               Michael Todd - Drums
-            </h3>
-            <img id="logo" src="files/blackicon.png" align="right">
+            </h4>
+            <img src="files/Toddy.jpg">
           </td>
         </tr>
       </table>
@@ -243,8 +256,8 @@
       <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
       <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
 
-      <div id="admin">
-        <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
+      <div align="right" id="admin">
+          <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
       </div>
     </div>
   </center>
