--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
       color: hsl(192, 67%, 27%);
     }
 
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%;
+      padding-top: 30px;
+      height: 0;
+      overflow: hidden;
+    }
+
+    .video-container iframe,
+    .video-container object,
+    .video-container embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
     .admin {
       margin-top: auto;
     }
@@ -172,28 +190,32 @@
     <br />
     <div class="block">
       <h3>Music</h3>
-      <iframe width="100%" height="auto" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?rel=0" frameborder="0"
-        allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
-    <br />
-    <div id="Links">
-      <!-- Add icon library -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <!-- Add font awesome icons -->
-      <a href="https://www.facebook.com/Ambivist/" class="fa fa-facebook"></a>
-      <a href="https://twitter.com/ambivistband/" class="fa fa-twitter"></a>
-      <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
-      <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
-      <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
+    <div class="video-container">
+      <iframe align="top" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?vq=hd720" frameborder="0"
+        allowfullscreen</iframe </div> </iframe> </div> <br />
+      <div class="video-container">
+        <iframe align="bottom" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Bx3ZP5uNWdU?vq=hd720" frameborder="0"
+          allowfullscreen</iframe </div> </iframe> </div> <br />
+        <br />
+        <br />
+        <br />
 
-      <div id="admin">
-        <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
-      </div>
-    </div>
+        <div id="Links">
+          <!-- Add icon library -->
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <br />
+          <br />
+          <!-- Add font awesome icons -->
+          <a href="https://www.facebook.com/Ambivist/" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/ambivistband/" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
+          <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
+          <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
+
+          <div align="right" id="admin">
+            <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
+          </div>
+        </div>
   </center>
 </body>
