--- a/news.html
+++ b/news.html
@@ -190,8 +190,8 @@
       <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
       <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
 
-      <div id="admin">
-        <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
+      <div align="right" id="admin">
+          <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
       </div>
     </div>
   </center>
