--- a/index.html
+++ b/index.html
@@ -153,13 +153,20 @@
       background: red;
       color: white;
     }
+
+        /* Spotify */
+    .fa-spotify {
+      background: #1ED760;
+      color: white;
+    }
+
   </style>
 </head>
 
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/blacklogo.png" alt="files/blackicon.png">
+    <img id="logo" src="files/logonew2.jpg" alt="files/logonew1.jpg">
     <div id="Bar">
       <table>
         <tr>
@@ -183,6 +190,11 @@
               <a href="gigs.html">Gigs</a>
             </h3>
           </td>
+          <td>
+            <h3>
+              <a href="contact.html">Contact</a>
+            </h3>
+          </td>
         </tr>
       </table>
     </div>
@@ -191,12 +203,22 @@
     <div class="block">
       <h3>Music</h3>
     </div>
-    <div class="video-container">
-      <iframe align="top" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?vq=hd720" frameborder="0"
-        allowfullscreen</iframe </div> </iframe> </div> <br />
-      <div class="video-container">
-        <iframe align="bottom" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Bx3ZP5uNWdU?vq=hd720" frameborder="0"
-          allowfullscreen</iframe </div> </iframe> </div> <br />
+          <table style="width:100%">
+        <tr>
+          <td>
+            <div class="video-container">
+              <iframe align="top" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Tl_3nNn660g?vq=hd720" frameborder="0"
+                allowfullscreen</iframe </div> </iframe> </div> <br />
+          </td>
+          <td>
+            <div class="video-container">
+              <iframe align="bottom" width="853" height="480" src="https://www.youtube-nocookie.com/embed/Bx3ZP5uNWdU?vq=hd720" frameborder="0"
+                allowfullscreen</iframe </div> </iframe> </div> <br />
+          </td>
+        </tr>
+      </table>
+
+
         <br />
         <br />
         <br />
@@ -212,6 +234,7 @@
           <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
           <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
           <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
+          <a href="https://open.spotify.com/embed/artist/2vSL76iO4A4S4dvE9Dhm4a" class="fa fa-spotify"></a>
 
           <div align="right" id="admin">
             <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
