--- a/gigs.html
+++ b/gigs.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Gigs</title>
+  <title>Contact</title>
   <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
   <meta name=”keywords” content=”Ambivist,Prog,Progressive,Glasgow,Scotland,Rock.”>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -134,14 +134,21 @@
     .fa-github {
       background: red;
       color: white;
+    }        
+    
+    /* Spotify */
+    .fa-spotify {
+      background: #1ED760;
+      color: white;
     }
+
   </style>
 </head>
 
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/blacklogo.png" alt="files/blackicon.png">
+    <img id="logo" src="files/logonew2.jpg" alt="files/logonew1.jpg">
     <div id="Bar">
       <table>
         <tr>
@@ -165,6 +172,11 @@
               <a href="gigs.html">Gigs</a>
             </h3>
           </td>
+          <td>
+            <h3>
+              <a href="contact.html">Contact</a>
+            </h3>
+          </td>
         </tr>
       </table>
     </div>
@@ -172,7 +184,7 @@
     <br />
     <div class="block">
       <h3>Gigs</h3>
-      <p> Nothing yet.</p>
+      <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Ambivist" data-display-local-dates="false" data-display-past-dates="true" data-auto-style="false" data-text-color="#000000" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-link-text-color="#FFFFFF" data-display-lineup="false" data-separator-color=""></a>
     </div>
     <br />
     <div id="Links">
@@ -189,6 +201,7 @@
       <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
       <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
       <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
+      <a href="https://open.spotify.com/embed/artist/2vSL76iO4A4S4dvE9Dhm4a" class="fa fa-spotify"></a>
 
       <div align="right" id="admin">
           <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
