--- a/news.html
+++ b/news.html
@@ -220,13 +220,13 @@
     <div class="grid">
       <div>
         <h4>Facebook</h4>
-        <div class="fb-page" data-href="https://www.facebook.com/Ambivist/" data-tabs="timeline" data-width="500" data-height="960px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Ambivist/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Ambivist/">Ambivist</a></blockquote></div>
+        <div class="fb-page" data-href="https://www.facebook.com/Ambivist/" data-tabs="timeline" data-width="500" data-height="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Ambivist/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Ambivist/">Ambivist</a></blockquote></div>
       </div>
       <div>
       <h4>Instagram</h4>
-        <!-- InstaWidget -->
-          <a href="https://instawidget.net/v/user/ambivistband" id="link-b1fce442f09bc850cc4a44591bac9ec22379d1b69a8058565c911a26d3fce058">@ambivistband</a>
-          <script src="https://instawidget.net/js/instawidget.js?u=b1fce442f09bc850cc4a44591bac9ec22379d1b69a8058565c911a26d3fce058&width=500"></script>
+        <!-- GrahamSnaps Widget Embed -->
+        <div id="gs-grid" class="gs-gUfJlqx5j8-FoQ"></div>
+        <script>(function(a,b,c,d,e){if(!(e in a)){a.gs=function(){a.gs.q.push(arguments);};a.gs.q=[];}var f=b.createElement(c);f.src=d;f.async=!0;var g=b.getElementsByTagName(c)[0];g.parentNode.insertBefore(f,g);})(window,document,"script","https://cdn.grahamsnaps.com/js/grid.js","gs");gs("Grid", "gUfJlqx5j8-FoQ");</script>
       </div>
     </div>
     </div>
