--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
   <link rel="icon" href="files/favicon.png">
+  <script src="snowstorm.js"></script>
   <style type="text/css">
     body {
       background-color: white;
