--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     #logo {
-      max-width: 50%
+      max-width: 25%
     }
 
     #admin a {
@@ -167,7 +167,7 @@
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/logonew2.jpg" alt="files/logonew1.jpg">
+    <img id="logo" src="files/festivelogo.jpg" alt="files/logonew2.jpg">
     <div id="Bar">
       <table>
         <tr>
