--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
   <link rel="icon" href="files/favicon.png">
+  <script src="snowstorm.js"></script>
   <style type="text/css">
     body {
       background-color: white;
@@ -72,7 +73,7 @@
     }
 
     #logo {
-      max-width: 50%
+      max-width: 25%
     }
 
     #admin a {
@@ -175,7 +176,7 @@
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/logonew2.jpg" alt="files/logonew1.jpg">
+    <img id="logo" src="files/festivelogo.jpg" alt="files/logonew2.jpg">
     <div id="Bar">
       <table>
         <tr>
