--- a/404.html
+++ b/404.html
@@ -55,9 +55,9 @@
     }
 
     #logo {
-      max-width: 50%;
-      max-height: 192px;
+      max-height: 8em;
     }
+
 
     #admin a {
       font-size: 87%
