Fixed small logo problem, scaling further tweaked. I no longer like em scaling.

--- a/404.html
+++ b/404.html
@@ -55,9 +55,9 @@
     }
 
     #logo {
-      max-height: 8em;
+      max-height: 192px;
+      max-width: 80%;
     }
-
 
     #admin a {
       font-size: 87%
