Added a copyright message, updated favicon

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
-  <link rel="icon" href="files/favicon.png">
+  <link rel="icon" href="files/favicon2.ico">
   <script src="snowstorm.js"></script>
   <style type="text/css">
     body {
@@ -114,6 +114,14 @@
     h4 {
       font-size: 110%;
       overflow: hidden;
+    }
+
+    footer {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    background-color: white;
+    color: black;
     }
 
     /* Style all font awesome icons */
@@ -275,5 +283,8 @@
           <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
       </div>
     </div>
+    <footer>
+    © 2018 Ambivist
+    </footer>
   </center>
 </body>
