Moved a bunch of css from html files to a dedicated stylesheet, means every change doesn't need to be done 6 times.

--- a/about.html
+++ b/about.html
@@ -11,53 +11,6 @@
   <link rel="icon" href="files/favicon2.ico">
   <script src="snowstorm.js"></script>
   <style type="text/css">
-    body {
-      background-color: white;
-      font-family: bariolregular
-    }
-
-    h1 {
-      color: black;
-      font-size: 237%;
-      font-weight: 900
-    }
-
-    h3 {
-      font-size: 117%
-    }
-
-    h3 a:visited {
-      color: #ece9e7;
-    }
-
-    h3 a:link {
-      color: #ece9e7;
-      text-decoration: none
-    }
-
-    h3 a:hover {
-      color: white;
-    }
-
-    p {
-      font-size: 125%;
-      font: fonts/
-    }
-
-    #Bar {
-      background-color: #1C1C1D;
-      color: white;
-    }
-
-    #Bar td {
-      height: 60%;
-      width: 300px;
-    }
-
-    #Bar table {
-      text-align: center;
-    }
-
     #Members {
       background-color: white;
       color: black;
@@ -70,113 +23,6 @@
 
     #Members table {
       text-align: center;
-    }
-
-    #logo {
-      max-height: 192px;
-      max-width: 80%;
-    }
-
-    #admin a {
-      font-size: 87%
-    }
-
-    #admin a:visited {
-      color: #ece9e7;
-    }
-
-    #admin a:link {
-      color: #ece9e7;
-    }
-
-    #admin a:hover {
-      color: hsl(192, 67%, 27%);
-    }
-
-    .admin {
-      margin-top: auto;
-    }
-
-    .About {
-      color: black;
-      font-size: 100%;
-      font-weight: 900
-    }
-
-    .About h3 p {
-      text-decoration: none
-    }
-
-    td img {
-      width: 80%;
-    }
-
-    h4 {
-      font-size: 110%;
-      overflow: hidden;
-    }
-
-    footer {
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    background-color: white;
-    color: black;
-    }
-
-    /* Style all font awesome icons */
-    .fa {
-      display: flex;
-      flex-direction: column;
-      padding: 2%;
-      font-size: 30px;
-      width: 10%;
-      max-width: 50px;
-      text-align: center;
-      text-decoration: none;
-    }
-
-    /* Add a hover effect if you want */
-    .fa:hover {
-      opacity: 0.7;
-    }
-
-    /* Set a specific color for each brand */
-
-    /* Facebook */
-    .fa-facebook {
-      background: #3B5998;
-      color: white;
-    }
-
-    /* Twitter */
-    .fa-twitter {
-      background: #55ACEE;
-      color: white;
-    }
-
-    /* Instagram */
-    .fa-instagram {
-      background: #125688;
-      color: white;
-    }
-
-    /* Reddit */
-    .fa-reddit {
-      background: #ff5700;
-      color: white;
-    }
-
-    /* Github */
-    .fa-github {
-      background: red;
-      color: white;
-    }
-
-        /* Spotify */
-    .fa-spotify {
-      background: #1ED760;
-      color: white;
     }
 
   </style>
@@ -219,7 +65,7 @@
     </div>
     <br />
     <br />
-    <div class="About">
+    <div class="block">
       <h3>About</h3>
       <p> Ambivist are a progressive rock band based in Glasgow, Scotland.</p>
     </div>
