--- a/index.html
+++ b/index.html
@@ -11,70 +11,6 @@
   <link rel="icon" href="files/favicon2.ico">
   <script src="snowstorm.js"></script>
   <style type="text/css">
-    body {
-      background-color: white;
-      font-family: bariolregular
-    }
-
-    h1 {
-      color: black;
-      font-size: 237%;
-      font-weight: 900
-    }
-
-    h3 a:visited {
-      color: #ece9e7;
-    }
-
-    h3 a:link {
-      color: #ece9e7;
-      text-decoration: none
-    }
-
-    h3 a:hover {
-      color: white;
-    }
-
-    p {
-      font-size: 125%;
-      font: fonts/
-    }
-
-    #Bar {
-      background-color: #1C1C1D;
-      color: white;
-    }
-
-    #Bar td {
-      height: 60%;
-      width: 300px;
-    }
-
-    #Bar table {
-      text-align: center
-    }
-
-    #logo {
-      max-height: 192px;
-      max-width: 80%;
-    }
-
-    #admin a {
-      font-size: 87%
-    }
-
-    #admin a:visited {
-      color: #ece9e7;
-    }
-
-    #admin a:link {
-      color: #ece9e7;
-    }
-
-    #admin a:hover {
-      color: hsl(192, 67%, 27%);
-    }
-
     .video-container {
       position: relative;
       padding-bottom: 56.25%;
@@ -91,83 +27,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-    }
-
-    .admin {
-      margin-top: auto;
-    }
-
-    .block {
-      color: black;
-      font-size: 100%;
-      font-weight: 900
-    }
-
-    .block h3 p {
-      text-decoration: none
-    }
-
-    footer {
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    background-color: white;
-    color: black;
-    }
-
-    /* Style all font awesome icons */
-    .fa {
-      display: flex;
-      flex-direction: column;
-      padding: 2%;
-      font-size: 30px;
-      width: 10%;
-      max-width: 50px;
-      text-align: center;
-      text-decoration: none;
-    }
-
-    /* Add a hover effect if you want */
-    .fa:hover {
-      opacity: 0.7;
-    }
-
-    /* Set a specific color for each brand */
-
-    /* Facebook */
-    .fa-facebook {
-      background: #3B5998;
-      color: white;
-    }
-
-    /* Twitter */
-    .fa-twitter {
-      background: #55ACEE;
-      color: white;
-    }
-
-    /* Instagram */
-    .fa-instagram {
-      background: #125688;
-      color: white;
-    }
-
-    /* Reddit */
-    .fa-reddit {
-      background: #ff5700;
-      color: white;
-    }
-
-    /* Github */
-    .fa-github {
-      background: red;
-      color: white;
-    }
-
-        /* Spotify */
-    .fa-spotify {
-      background: #1ED760;
-      color: white;
     }
 
   </style>
@@ -212,8 +71,7 @@
     <br />
     <div class="block">
       <h3>Music</h3>
-    </div>
-          <table style="width:100%">
+      <table style="width:100%">
         <tr>
           <td>
             <div class="video-container">
@@ -227,29 +85,30 @@
           </td>
         </tr>
       </table>
+    </div>
+    <br />
+    <div id="Links">
+      <!-- Add icon library -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <br />
-        <div id="Links">
-          <!-- Add icon library -->
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <!-- Add font awesome icons -->
-          <a href="https://www.facebook.com/Ambivist/" class="fa fa-facebook"></a>
-          <a href="https://twitter.com/ambivistband/" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
-          <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
-          <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
-          <a href="https://open.spotify.com/embed/artist/2vSL76iO4A4S4dvE9Dhm4a" class="fa fa-spotify"></a>
-
-          <div align="right" id="admin">
-            <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
-          </div>
-        </div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <!-- Add font awesome icons -->
+      <a href="https://www.facebook.com/Ambivist/" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/ambivistband/" class="fa fa-twitter"></a>
+      <a href="https://www.instagram.com/ambivistband/" class="fa fa-instagram"></a>
+      <a href="https://www.reddit.com/r/Ambivist/" class="fa fa-reddit"></a>
+      <a href="https://github.com/babbysross/ambivist" class="fa fa-github"></a>
+      <a href="https://open.spotify.com/embed/artist/2vSL76iO4A4S4dvE9Dhm4a" class="fa fa-spotify"></a>
+    </div>
+    <div align="right" id="admin">
+      <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
+    </div>
     <footer>
     © 2018 Ambivist
     </footer>
   </center>
 </body>
+</html>
