--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
   <link rel="icon" href="files/favicon2.ico">
-  <script src="snowstorm.js"></script>
+<!-- <script src="snowstorm.js"></script> -->
   <style type="text/css">
     #Members {
       background-color: white;
@@ -31,7 +31,7 @@
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/festivelogo.jpg" alt="files/logonew2.jpg">
+    <img id="logo" src="files/logonew2.jpg" alt="files/festivelogo.jpg">
     <div id="Bar">
       <table>
         <tr>
@@ -130,7 +130,7 @@
       </div>
     </div>
     <footer>
-    © 2018 Ambivist
+    © 2018-2019 Ambivist
     </footer>
   </center>
 </body>
