--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
   <link rel="icon" href="files/favicon2.ico">
-  <script src="snowstorm.js"></script>
+<!-- <script src="snowstorm.js"></script> -->
   <style type="text/css">
     .video-container {
       position: relative;
@@ -35,7 +35,7 @@
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/festivelogo.jpg" alt="files/logonew2.jpg">
+    <img id="logo" src="files/logonew2.jpg" alt="files/festivelogo.jpg">
     <div id="Bar">
       <table>
         <tr>
@@ -107,7 +107,7 @@
       <a href="https://s3.console.aws.amazon.com/s3/">Admin Login</a>
     </div>
     <footer>
-    © 2018 Ambivist
+      © 2018-2019 Ambivist
     </footer>
   </center>
 </body>
