--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Ambivist">
   <meta charset="UTF-8">
   <link rel="icon" href="files/favicon2.ico">
-  <script src="snowstorm.js"></script>
+<!-- <script src="snowstorm.js"></script> -->
   <style type="text/css">
 
     .video-container {
@@ -43,7 +43,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/festivelogo.jpg" alt="files/logonew2.jpg">
+    <img id="logo" src="files/logonew2.jpg" alt="files/festivelogo.jpg">
     <div id="Bar">
       <table>
         <tr>
@@ -112,7 +112,7 @@
       </div>
     </div>
     <footer>
-    © 2018 Ambivist
+      © 2018-2019 Ambivist
     </footer>
   </center>
 </body>
