Replaced ambivist logo with transparent png, better for dark themes.

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <body>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/logonew2.jpg" alt="files/festivelogo.jpg">
+    <img id="logo" src="files/logonew2.png" alt="files/festivelogo.png">
     <div id="Bar">
       <table>
         <tr>
