--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
   <center>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
-    <img id="logo" src="files/logonew2.jpg" alt="files/festivelogo.jpg">
+    <img id="logo" src="files/logonew2.png" alt="files/festivelogo.png">
     <div id="Bar">
       <table>
         <tr>
