--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Ambivist</title>
+  <title>News</title>
   <meta name=”description” content=”Ambivist are a progressive rock band based in Glasgow, Scotland.”>
   <meta name=”keywords” content=”Ambivist,Prog,Progressive,Glasgow,Scotland,Rock.”>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
